# polymorphic-lambda-typechecker

./: .gitignore  README.md  typechecker.cabal
.github/workflows/: haskell.yml
app/: Main.hs
src/: Dummy.hs  Parser.hs  PolymorphicTyping.hs  Typing.hs  TypingIO.hs
tests/: Test.hs
