cabal-version:      2.4
name:               typechecker
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             muldrik
maintainer:         muldrik@yandex.ru

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

common shared
  default-language: Haskell2010
  build-depends:
    base ^>=4.14,
    containers
  ghc-options:
    -Wall


library
    import: shared
    hs-source-dirs: src
    other-extensions: 
      RankNTypes,
      InstanceSigs,
      NoMonomorphismRestriction,
      ScopedTypeVariables
    exposed-modules: 
      PolymorphicTyping,
      TypingIO,
      Parser

executable typechecker-executable
    import: shared
    main-is:          Main.hs
    hs-source-dirs:   app

Test-Suite typechecker-test
    type:       exitcode-stdio-1.0
    main-is:    Test.hs
    hs-source-dirs: tests
    build-depends: 
        base,
        typechecker,
        tasty ^>=1.4,
        containers,
        tasty-hunit,
        tasty-quickcheck
    default-language: Haskell2010   